fixed the description too long issue

--- a/app/assets/stylesheets/slideshow/picture-label.sass
+++ b/app/assets/stylesheets/slideshow/picture-label.sass
@@ -29,6 +29,8 @@
     color: #151515
     background: #404040
     padding: 10px
+    max-height: 200px
+    overflow: auto
     a
       color:  #302010
     a:hover
